<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/title_bg">

    <ImageView
        android:id="@+id/title_img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/title_img"
         />

    <Button
        android:id="@+id/play_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:text="@string/play"
        android:textSize="20sp"
        android:layout_below="@+id/title_img"
        android:onClick="play_Click"

         />

    <Button
        android:id="@+id/howToPlay"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:text="@string/howToPlay"
        android:textSize="20sp"
        android:layout_below="@+id/play_button"
        android:onClick="howToPlay_Click"

        />

    <Button
        android:id="@+id/achievements"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:text="@string/achievements"
        android:textSize="20sp"
        android:layout_below="@+id/howToPlay"
        android:onClick="achievementClick"
         />

    <Button
        android:id="@+id/leaderboard"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:text="@string/leaderboard"
        android:textSize="20sp"
        android:layout_below="@+id/achievements"
        android:onClick="leaderboardClick"
        />


</RelativeLayout>
