<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_bg"
    >

    <FrameLayout

        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="600dp"
        android:layout_marginTop="30dp">

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="200dp"
            android:horizontalSpacing="10dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" >
        </GridView>

        <ImageView
            android:id="@+id/expanded_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:visibility="invisible" />


    </FrameLayout>

    <LinearLayout
        android:id="@+id/top_Buttons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/container"
        android:layout_centerInParent="true"
        android:paddingLeft="60dp"
        >


        <Button
            android:id="@+id/first_answer"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/first"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/light_plumb"
            android:onClick="answer_Click"
            />

        <Button
            android:id="@+id/second_answer"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/second"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/light_plumb"
            android:onClick="answer_Click"
            />

        <Button
            android:id="@+id/third_answer"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/third"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/light_plumb"
            android:onClick="answer_Click"
            />
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_Buttons"
        android:layout_centerInParent="true"
        android:paddingLeft="60dp"
        >


        <Button
            android:id="@+id/fourth_answer"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/fourth"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/light_plumb"
            android:onClick="answer_Click"
            />

        <Button
            android:id="@+id/fifth_answer"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/fifth"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/light_plumb"
            android:onClick="answer_Click"
            />

        <Button
            android:id="@+id/sixth_answer"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/sixth"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/light_plumb"
            android:onClick="answer_Click"
            />
    </LinearLayout>
</RelativeLayout>


